<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/details_root_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".ui.ArticleDetailsActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolbarThemeWhite"
            app:title="Article's Details">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/article_details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ShareButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="end"
                    android:text=""
                    android:textColor="@color/content_text_color"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_share" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.dmallcott.dismissibleimageview.DismissibleImageView
                    android:id="@+id/ArticleImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_hin"
                    android:src="@drawable/ic_baseline_supervised_user_circle_24" />


                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/title"
                        android:textColor="@color/title_text_color"
                        android:textSize="@dimen/_17sdp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:gravity="start"
                            android:text="@string/author"
                            android:textColor="@color/content_text_color"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold"
                            app:drawableStartCompat="@drawable/ic_baseline_edit_24" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:text="@string/date"
                            android:textColor="@color/content_text_color"
                            android:textSize="@dimen/_9sdp"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/ic_date" />
                    </RelativeLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@color/content_text_color" />

                    <TextView
                        android:id="@+id/Description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/content_text_color"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="20"
                        android:text="@string/content"
                        android:textColor="@color/content_text_color"
                        android:textSize="@dimen/_11sdp" />

                    <TextView
                        android:id="@+id/url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/url"
                        android:textColor="@color/content_text_color"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>